# pulque

./: .gitignore  ChangeLog  INSTALL  LICENSE  Makefile.am  README  USING  autogen.sh  configure.ac  pulque.gemspec
etc/bash_completion.d/: pulque.sh
lib/pulque/: require_load.rb
lib/pulque/changelogs/: changelog.rb  factory.rb  git.rb  mercurial.rb  subversion.rb
lib/pulque/repositories/: bazaar.rb  factory.rb  git.rb  mercurial.rb  repository.rb  subversion.rb
lib/pulque/utils/: environment.rb
man/: pdetect.1  plist.1  pswitch.1
man/man1/: pcl.1  pcreate.1  pexists.1  plist.1  premove.1
pulque/: __premove  pcreate  pdetect  pexists  plist  premove
pulque/lib/utils/: environment.rb
pulque/repositories/: bazaar.rb  factory.rb  git.rb  mercurial.rb  repository.rb
test/: Makefile.am  repositories_factory.rb  repositories_repository.rb
